listar y crear Producto hecho

--- a/src/main/resources/templates/crear-fabricante.html
+++ b/src/main/resources/templates/crear-fabricante.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="container mx-auto px-4">
-	<form th:action="@{/fabricantes/crear/}" th:object="${fabricante}" method="post">
+	<form th:action="@{/fabricantes/crear}" th:object="${fabricante}" method="post">
 		<div class="flex flex-row py-4 items-center border-b-2 p-2">
 			<div class="basis-1/2 text-4xl">
 				<h1>Crear Fabricante</h1>
