--- a/src/main/resources/templates/productos.html
+++ b/src/main/resources/templates/productos.html
@@ -39,7 +39,7 @@
             <form  th:action="@{/productos/__${producto.codigo}__}">
                 <button class="mx-0.5 w-8 btn btn-green">Ver Detalle</button>
             </form>
-            <form th:action="@{/productos/editar/__${producto.codigo}__}" method="post">
+            <form th:action="@{/productos/editar/__${producto.codigo}__}" method="get"> <!--Formularios por defecto usan method get -->
                 <button class=" mx-0.5 btn btn-blue">Editar</button>
             </form>
             <form th:action="@{/productos/borrar/__${producto.codigo}__}" method="post">
