--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>index</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="/style.css"/>
 </head>
 <body>
 <div class="container mx-auto px-4">
@@ -12,14 +13,23 @@
             <h1>Tienda</h1>
         </div>
     </div>
+
     <div class="flex flex-row justify-center my-4 space-x-4">
         <div class="basis-1/4 text-center">
             <a href="/productos" class="btn btn-blue px-4 py-2 bg-blue-500 text-white rounded">Ver Productos</a>
         </div>
+
         <div class="basis-1/4 text-center">
             <a href="/fabricantes" class="btn btn-green px-4 py-2 bg-green-500 text-white rounded">Ver Fabricantes</a>
         </div>
+
     </div>
+    <!--    Otra Manera de redirección  con @{}  -->
+    <form th:action="@{/productos}" type="submit" class=" text-center mt-5">
+        <button  type="submit" class="btn btn-gray  text-center" >con form (redirigir)</button>
+    </form>
+
+
 </div>
 </body>
 </html>
